--- a/DMStackCollections/Base.lproj/Main.storyboard
+++ b/DMStackCollections/Base.lproj/Main.storyboard
@@ -83,6 +83,7 @@
                         <viewControllerLayoutGuide type="bottom" id="npz-Qa-BUf"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Kjy-PI-WNG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GNv-aq-gHT">
